[gd_scene load_steps=2 format=2]

[ext_resource path="res://MultiplayerScene/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="LobbyContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 203.015
margin_top = 1.50735
margin_right = 1083.01
margin_bottom = 721.507
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NetworkConfig" type="HBoxContainer" parent="LobbyContainer"]
margin_top = 279.0
margin_right = 879.0
margin_bottom = 319.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
alignment = 1

[node name="NetworkLabel" type="Label" parent="LobbyContainer/NetworkConfig"]
margin_top = 7.0
margin_right = 193.0
margin_bottom = 32.0
text = "Network Address:"

[node name="NetworkAddress" type="TextEdit" parent="LobbyContainer/NetworkConfig"]
margin_left = 201.0
margin_right = 879.0
margin_bottom = 40.0
rect_min_size = Vector2( 480, 0 )
size_flags_horizontal = 3
text = "IP Address"

[node name="LobbyControl" type="HBoxContainer" parent="LobbyContainer"]
margin_top = 327.0
margin_right = 879.0
margin_bottom = 364.0

[node name="HostButton" type="Button" parent="LobbyContainer/LobbyControl"]
margin_right = 287.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="LobbyContainer/LobbyControl"]
margin_left = 295.0
margin_right = 582.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Join"

[node name="StartButton" type="Button" parent="LobbyContainer/LobbyControl"]
margin_left = 590.0
margin_right = 879.0
margin_bottom = 37.0
size_flags_horizontal = 3
disabled = true
text = "Start Game"

[node name="spacingNode" type="CenterContainer" parent="LobbyContainer"]
margin_top = 372.0
margin_right = 879.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 20 )

[node name="LobbyLabel" type="HBoxContainer" parent="LobbyContainer"]
margin_top = 400.0
margin_right = 879.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
alignment = 1

[node name="PlayersInLobbylabel" type="Label" parent="LobbyContainer/LobbyLabel"]
margin_left = 275.0
margin_top = 7.0
margin_right = 583.0
margin_bottom = 32.0
text = "Number of players in lobby: "

[node name="PlayerCount" type="Label" parent="LobbyContainer/LobbyLabel"]
margin_left = 591.0
margin_top = 7.0
margin_right = 604.0
margin_bottom = 32.0
text = "0"
[connection signal="pressed" from="LobbyContainer/LobbyControl/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="LobbyContainer/LobbyControl/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="LobbyContainer/LobbyControl/StartButton" to="." method="_on_StartButton_pressed"]
